# speechmatics-python-sdk

./: .gitignore  .pre-commit-config.yaml  1_nb_async_client_  LICENSE  Makefile  README.md  build.py  dev-setup.sh  pyproject.toml  requirements-dev.txt
.github/: RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: release-batch.yaml  release-flow.yaml  release-rt-utils.yaml  release-rt.yaml  release-sdk.yaml  release-tts.yml  release-voice.yaml  test.yaml
examples/batch/: transcribe_file_async.py
examples/rt/: multi_channel_example.py  requirements-examples.txt  transcribe_file_async.py
examples/rt/async/file/: main.py
examples/rt/async/live_stream/: README.md  main.py
examples/rt/async/microphone/: README.md  main.py
examples/rt/async/multi_chan/: main.py
examples/rt/async/speaker_id/: README.md  generate.py  main.py  transcribe.py
examples/tts/: realtime_parsing_example.py  streaming_example.py  tts_async_example.py  tts_basic.py
examples/tts/tts_autoplay/: README.md  requirements.txt  tts_stream_example.py  tts_stream_v2.py
examples/voice/: README.md  file_to_jsonl.py  file_transcription.py  microphone_transcription.py  requirements-examples.txt  utils.py
examples/voice/cli/: README.md  cli.py  main.py  utils.py
examples/voice/scribe/: README.md  scribe.py  vocab.json
examples/voice/simple/: README.md  simple.py
examples/voice/speaker_id/: README.md  main.py
sdk/TTS/: README.md
sdk/TTS/speechmatics/: __init__.py
sdk/TTS/speechmatics/tts/: __init__.py  _async_client.py  _models.py  _realtime_streaming_client.py  _streaming_client.py  _transport.py
sdk/batch/: MIGRATION.md  README.md  pyproject.toml
sdk/batch/speechmatics/batch/: __init__.py  _async_client.py  _helpers.py  _models.py  _transport.py
sdk/flow/: MIGRATION.md  README.md  pyproject.toml
sdk/flow/speechmatics/flow/: __init__.py  _async_client.py  _auth.py  _events.py  _exceptions.py  _logging.py  _models.py  _transport.py
sdk/flow/speechmatics/flow/_utils/: audio.py  version.py
sdk/rt/: MIGRATION.md  README.md  pyproject.toml
sdk/rt-utils/: MIGRATION.md  README.md  pyproject.toml
sdk/rt/speechmatics/rt/: __init__.py  _async_client.py  _async_multi_channel_client.py  _audio_sources.py  _auth.py  _base_client.py  _events.py  _exceptions.py  _framers.py  _helpers.py  _models.py  _sources.py  _transport.py  constants.py
sdk/rt/speechmatics/rt/_utils/: audio.py  message.py  microphone.py  version.py
sdk/sdk/: README.md  pyproject.toml
sdk/sdk/speechmatics/sdk/: __init__.py
sdk/tts/: README.md  pyproject.toml
sdk/tts/speechmatics/: __init__.py
sdk/tts/speechmatics/tts/: __init__.py  _async_client.py  _auth.py  _helpers.py  _models.py  _transport.py
sdk/voice/: OVERVIEW.md  README.md  pyproject.toml
sdk/voice/speechmatics/voice/: __init__.py  _audio.py  _client.py  _helpers.py  _logging.py  _models.py  _presets.py  _smart_turn.py  _turn.py  _utils.py  _vad.py
speechmatics/batch/: Makefile  README.md  __init__.py  pyproject.toml  setup.py
speechmatics/batch/core/: __init__.py  async_client.py  exceptions.py  helpers.py  logging.py  models.py  transport.py
speechmatics/rt/: Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
speechmatics/rt/core/: __init__.py  async_client.py  events.py  exceptions.py  helpers.py  logging.py  models.py  transport.py
speechmatics/shared/: __init__.py  version.py
tests/: test_cve.py
tests/batch/: test_models.py  test_submit_job.py
tests/tts/: async_http_test.py
tests/voice/: README.md  _utils.py  test_01_client.py  test_02_messages.py  test_02_transcriber.py  test_03_conversation.py  test_04_models.py  test_05_thought.py  test_05_utterance.py  test_06_languages.py  test_06_stt_config.py  test_06_thought.py  test_07_languages.py  test_08_multiple_speakers.py  test_09_speaker_id.py  test_10_finalize.py  test_11_audio_buffer.py  test_12_smart_turn.py  test_12_smart_turn_with_files.py  test_13_smart_turn_transcribe.py  test_14_presets.py  test_15_esl.py  test_16_url.py  test_17_eou_feou.py  test_18_feou.py  test_18_feou_timestamp.py  test_19_no_feou_fix.py  test_20_stt.py  test_21_stt_raw.py
tests/voice/assets/: chat1.jsonl  chat2.jsonl  chat3.jsonl
