[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechmatics-batch"
dynamic = ["version"]
description = "Speechmatics Batch API Client"
readme = "README.md"
authors = [{ name = "Speechmatics", email = "support@speechmatics.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = ["aiohttp", "aiofiles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["speechmatics", "speech-to-text", "batch", "transcription", "api"]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "types-aiofiles",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "build",
]

[project.urls]
homepage = "https://github.com/speechmatics/speechmatics-python-sdk"
documentation = "https://docs.speechmatics.com/"
repository = "https://github.com/speechmatics/speechmatics-python-sdk"
issues = "https://github.com/speechmatics/speechmatics-python-sdk/issues"

[tool.setuptools.dynamic]
version = { attr = "speechmatics.batch.__version__" }

[tool.setuptools.packages.find]
where = ["."]

[[tool.mypy.overrides]]
module = ["aiofiles.*"]
ignore_missing_imports = true
