[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechmatics-sdk"
dynamic = ["version"]
description = "Speechmatics Python SDK - Complete package for all Speechmatics APIs"
readme = "README.md"
authors = [{ name = "Speechmatics", email = "support@speechmatics.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "speechmatics-batch",
    "speechmatics-rt",
    "speechmatics-voice",
    "speechmatics-tts",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "speechmatics",
    "speech-to-text",
    "tts",
    "voice",
    "agents",
    "batch",
    "real-time",
    "transcription",
    "api",
    "sdk",
]

[tool.setuptools.dynamic]
version = { attr = "speechmatics.sdk.__version__" }

[project.optional-dependencies]
smart = [
    "speechmatics-voice[smart]",
]

dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "build",
]

[project.urls]
homepage = "https://github.com/speechmatics/speechmatics-python-sdk"
documentation = "https://docs.speechmatics.com/"
repository = "https://github.com/speechmatics/speechmatics-python-sdk"
issues = "https://github.com/speechmatics/speechmatics-python-sdk/issues"
