[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechmatics-batch"
dynamic = ["version"]
description = "Speechmatics Batch API Client"
readme = "README.md"
authors = [
    {name = "Speechmatics", email = "support@speechmatics.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/speechmatics/speechmatics-python-sdk"
documentation = "https://github.com/speechmatics/speechmatics-python-sdk#readme"
repository = "https://github.com/speechmatics/speechmatics-python-sdk"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["batch*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["B008", "E203"]

[tool.ruff.isort]
known-first-party = ["batch"]
